FusionDev Backup1/src/objects/YETIUNITY_RMA_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RMA Receipts</relationshipLabel>
        <relationshipName>RMA_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Receipt_Date__c</fullName>
        <label>RMA Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Receipt_Line__c</fullName>
        <label>RMA Receipt Line</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Receipt_Qty__c</fullName>
        <label>RMA Receipt Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>RMA Receipt</label>
    <nameField>
        <label>RMA Receipt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>